@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.99 2005/11/06 15:31:20 abs Exp $
+# $NetBSD: Makefile,v 1.100 2006/02/04 15:08:33 abs Exp $
 #
 
-DISTNAME=	cpuflags-0.96
+DISTNAME=	cpuflags-0.97
 CATEGORIES=	sysutils
 MASTER_SITES=	# empty
 DISTFILES=	# empty
